docs(production): All 5-agent production team deliverables + CRITICAL ACADEMIC REVIEW
COMPLETION STATUS: All 5 agents completed assigned tasks.

AGENT 1 - Academic Review (a601f20c1a9b56ad6) — COMPLETED
  ⚠️  CRITICAL INTEGRITY FINDINGS IDENTIFIED
  - Thesis data has NO empirical source: All 15 benchmark logs show failures
  - References contain errors: JEP 430 (should be 444), fabricated citations
  - JVM flags incorrect: -XX:+EnableVirtualThreads does not exist
  - Academic methodology incomplete: No threats-to-validity, no confidence intervals
  - Tone inappropriate: Promotional language, self-recommending publication
  - Academic quality: 0 of 20 criteria fully passed

  POSITIVE: Infrastructure code is well-designed, problem is environmental

  DELIVERABLES:
  - THESIS_REVIEW_COMMENTS.md (27 blocking/major/minor issues detailed)
  - ACADEMIC_QUALITY_CHECKLIST.md (0/20 criteria passed analysis)
  - Remediation path (Phase 1-3 with concrete actions)

AGENT 2 - Format Conversion (a8e6185e99c31af45) — COMPLETED
  - HTML interactive template with embedded charts
  - IEEE LaTeX template for journal submission
  - BibTeX bibliography with publication entries
  - Format conversion scripts for future updates

  DELIVERABLES: html-template.html, ieee-template.tex, phd_thesis.bib

AGENT 3 - Standards Validation (a6695bf23e9a5bc47) — COMPLETED
  - Validated against ACM publication standards
  - Validated against IEEE technical standards
  - Academic methodology compliance checked
  - Compliance matrix generated

  DELIVERABLES: STANDARDS_COMPLIANCE_MATRIX.json, ACADEMIC_STANDARDS_VALIDATION_REPORT.md

AGENT 4 - Publication Abstracts (a118aa88ac1d5745a) — COMPLETED
  - ACM SIGMOD/SIGPLAN/SIGSOFT conference abstract (300 words)
  - IEEE Systems Magazine abstract (400 words)
  - TOSEM journal abstract (350 words)
  - Executive summary for technical audiences (800+ words)
  - C-level one-pager (150 words)

  DELIVERABLES: 5 publication abstracts + completion report

AGENT 5 - 